gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: gateway
  namespace: istio-gateway
spec:
  gatewayClassName: istio
  listeners:
    - name: default
      hostname: "*.yuchiki.net"
      port: 8085
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: default
      hostname: "*.yuchiki.net"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
